[package]
name = "dutch-auction"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.7.4"
arrayref = "0.3.6"
thiserror = "1.0.29"
borsh = "0.9.1"

[features]
test-bpf = []

[dev-dependencies]
solana-sdk = "1.7.4"

[lib]
crate-type = ["cdylib", "lib"]
